[package]
name = "kasparustwallet"
version = "0.1.0"
edition = "2021"
description = "A Kaspa cryptocurrency wallet implementation in Rust"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rand = "0.8"
hmac = "0.12"
ripemd = "0.1"
bs58 = "0.5"
secp256k1 = { version = "0.29", features = ["rand-std"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
hex = "0.4"
